Changed image path

--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: rotendahl/kuber_multi_client
+          image: ghcr.io/rotendahl/kubernetes-test/client
           ports:
             - containerPort: 3000
