--- a/k8s/worker-config.yaml
+++ b/k8s/worker-config.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
        - name: worker
-         image: rotendahl/kuber_multi_worker
+         image: ghcr.io/rotendahl/kubernetes-test/worker
          env:
           - name: REDIS_HOST
             value: redis-service
