--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,12 @@ name: Test code builds images and pushes to docker hub
 on: [push]
 
 jobs:
-  build:
+  test:
     name: build shit
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-
-      - name: Creating test client image
-        run: docker build -t client_test -f client/Dockerfile.dev client
-      - name: run client test
-        run: docker run -e CI=true client_test npm test
 
       - name: Login to GH Container Registry
         uses: docker/login-action@v1
@@ -48,3 +43,6 @@ jobs:
           file: worker/Dockerfile
           push: true
           tags: ghcr.io/rotendahl/kubernetes-test/worker:latest
+
+      - name: test sha
+        run: echo "commit-$(git rev-parse --short HEAD)"
