--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,9 @@ jobs:
           context: ./client
           file: client/Dockerfile
           push: true
-          tags: ghcr.io/rotendahl/kubernetes-test/client:latest
+          tags: |
+            ghcr.io/rotendahl/kubernetes-test/client:latest
+            ghcr.io/rotendahl/kubernetes-test/client:$(git rev-parse --short HEAD)
 
       - name: Push Server to GH Reg
         uses: docker/build-push-action@v2
